# Workspace-for-Hamster-Robot

./: CMakeLists.txt  c_cpp_properties.json  hamstersim.world  listener.cpp  nagymap.world  nowallmap.world  package.xml  purepursuit.cpp  settings.json
global_planner/: CMakeLists.txt
global_planner/plugins/: global_planner.cpp  global_planner.h
hamster_robot_loc/params/: amcl.yaml
hamster_teleop/src/: cmdvel_to_ackermann_nodeAK.py  twist_to_ackermann_nodeAK.py
hamster_vehicle/launch/: amcl.movebase.launch  artifical_akcontroll_hamster.launch  hamster_karto.launch  hamster_potential.launch  hamster_real.launch  hamster_real_karto.launch  hamster_sim .launch  real_akcontroll_hamster.launch  single.launch
hamster_vehicle/rviz/: hamsters.rviz
hamster_vehicle_description/launch/: hamster_agent.launch
hamster_vehicle_description/urdf/: _d435.urdf.xacro
mapping_controller/maps/: map.pgm  map.yaml  nagymap.pgm  nagymap.yaml  nowallmap.pgm  nowallmap.yaml  st123.pgm  st123.yaml  st123_2.pgm  st123_2.yaml  st123_4.pgm  st123_4.yaml  twoobs.pgm  twoobs.yaml  wallmap.pgm  wallmap.yaml
mapping_controller/params/: amcl.yaml  karto_mapper_params.yaml
